--- a/src/AzSK.ADO/Framework/Configurations/SVT/ADO/ADO.Project.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ADO/ADO.Project.json
@@ -261,48 +261,48 @@
       "Enabled": true
     },
     {
-      "ControlID": "ADO_Project_Check_Author_Email_Validation_Policy",
-      "Description": "Check Author Email Validation Policy.",
+      "ControlID": "ADO_Project_SI_Review_Author_Email_Validation_Policy",
+      "Description": "Enable commit author email validation to restrict commits to repositories from untrusted users.",
       "Id": "Project260",
-      "ControlSeverity": "High",
+      "ControlSeverity": "Medium",
       "Automated": "Yes",
       "MethodName": "CheckAuthorEmailValidationPolicy",
-      "Rationale": "Check Author Email Validation Policy.",
-      "Recommendation": "",
+      "Rationale": "Allowing commits from untrusted users can be dangerous as any malicious actor can push changes that can expose secrets/vulnerabilities outside the organization.",
+      "Recommendation": "Go to Project Settings --> Repositories --> Policies --> Enable 'Commit author email validation' and specify exact emails or wildcards for identities who can commit code.",
       "Tags": [
         "SDL",
-        "AuthN",
+        "SI",
         "Automated",
         "Best Practice"
       ],
       "Enabled": true
     },
     {
-      "ControlID": "ADO_Project_Check_Credentials_And_Secrets_Policy",
-      "Description": "Check Credentials And Secrets Policy.",
+      "ControlID": "ADO_Project_DP_Enable_Credentials_And_Secrets_Policy",
+      "Description": "Enable credential scanner to block pushes that contain credentials and other secrets.",
       "Id": "Project270",
       "ControlSeverity": "High",
       "Automated": "Yes",
       "MethodName": "CheckCredentialsAndSecretsPolicy",
-      "Rationale": "Check Credentials And Secrets Policy.",
-      "Recommendation": "",
+      "Rationale": "Exposed credentials in engineering systems continue to provide easily exploitable opportunities for attackers. To defend against this threat, Microsoft security experts developed the CredScan tool to automatically find exposed secrets. CredScan indexes and scans for credentials & other sensitive content in source code, as well as other data sources.",
+      "Recommendation": "Go to Project Settings --> Repositories --> Policies --> Enable 'Check for credentials and other secrets'.",
       "Tags": [
         "SDL",
-        "AuthN",
+        "DP",
         "Automated",
         "Best Practice"
       ],
-      "Enabled": true
+      "Enabled": false
     },
     {
-      "ControlID": "ADO_Project_DP_Inactive_Repo",
-      "Description": "Check the repo to be inactive or not.",
+      "ControlID": "ADO_Project_DP_Inactive_Repos",
+      "Description": "Inactive repositories must be removed if no more required.",
       "Id": "Project280",
-      "ControlSeverity": "High",
+      "ControlSeverity": "Medium",
       "Automated": "Yes",
       "MethodName": "CheckInactiveRepo",
-      "Rationale": "Checks whether the repo is inactive or not based on the last pull-request.",
-      "Recommendation": "Refer: https://docs.microsoft.com/en-us/rest/api/azure/devops/git/pull%20requests/get%20pull%20request?view=azure-devops-rest-6.0",
+      "Rationale": "Each additional repository being accessed by pipelines increases the attack surface. To minimize this risk ensure that only active and legitimate repositories are present in project.",
+      "Recommendation": "To remove inactive repository, follow the steps given here: 1. Navigate to the project settings -> 2. Repositories -> 3. Select the repository and delete.",
       "Tags": [
         "SDL",
         "TCP",
@@ -313,13 +313,13 @@
     },
     {
       "ControlID": "ADO_Project_AuthZ_Repo_Grant_Min_RBAC_Access",
-      "Description": "Get the repo's inherited permissions list.",
+      "Description": "All teams/groups must be granted minimum required permissions on repositories.",
       "Id": "Project290",
       "ControlSeverity": "High",
       "Automated": "Yes",
       "MethodName": "CheckRepoRBACAccess",
       "Rationale": "Granting minimum access by leveraging RBAC feature ensures that users are granted just enough permissions to perform their tasks. This minimizes exposure of the resources in case of user/service account compromise.",
-      "Recommendation": "Refer: https://docs.microsoft.com/en-us/azure/devops/pipelines/policies/permissions?view=vsts",
+      "Recommendation": "Go to Project Settings --> Repositories --> Permissions --> Validate whether each user/group is granted minimum required access to repositories.",
       "Tags": [
         "SDL",
         "TCP",
@@ -331,13 +331,13 @@
     },
     {
       "ControlID": "ADO_Project_AuthZ_Disable_Inherited_Permissions",
-      "Description": "Do not allow inherited permission on repo definitions.",
+      "Description": "Do not allow inherited permission on repositories.",
       "Id": "Project300",
       "ControlSeverity": "High",
       "Automated": "Yes",
       "MethodName": "CheckInheritedPermissions",
-      "Rationale": "Disabling inherited permissions lets you finely control access to various operations at the repo level for different stakeholders. This ensures that you follow the principle of least privilege and provide access only to the persons that require it.",
-      "Recommendation": "To disable inheritance follow the steps given here: 1.Navigate to the repo pipeline. 2. Select three dots (present at right top). 3. Click Manage Security 4. Add the service lead & service owner as Users with Allow permissions for each permission line item. 5. Disable Inheritance. 6. Add users/groups to your repo definition and provide only required access. As best practice, All teams/groups must be granted minimum required permissions on repo definition.",
+      "Rationale": "Disabling inherited permissions lets you finely control access to various operations at the repository level for different stakeholders. This ensures that you follow the principle of least privilege and provide access only to the persons that require it.",
+      "Recommendation": "Go to Project Settings --> Repositories --> Select a repository --> Permissions --> Disable 'Inheritance'.",
       "Tags": [
         "SDL",
         "TCP",
